-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0-beta1
-
None
-
Windows, ELF executable
-
73c5cf29c (master)
Example:
- Open Attach to Running Remote Debug Server
- In Local Executable, type the path of an existing executable (e.g. F:\Projects\test\test)
- OK is not enabled
- Add another character (invalid)
- OK is enabled
- Delete the extra character (valid)
- OK is disabled
For Gerrit Dashboard: QTCREATORBUG-29525 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
498329,3 | Utils: Add missing connections to validChanged | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |