src/plugins/debugger/debuggerdialogs.cpp
@@ -290,8 +290,11 @@ StartApplicationDialog::StartApplicationDialog(QWidget *parent)
     verticalLayout->addWidget(Layouting::createHr());
     verticalLayout->addWidget(d->buttonBox);
 
-    connect(d->localExecutablePathChooser, &PathChooser::rawPathChanged,
-            this, &StartApplicationDialog::updateState);
+    connect(d->localExecutablePathChooser,
+            &PathChooser::validChanged,
+            this,
+            &StartApplicationDialog::updateState);
+
     connect(d->buttonBox, &QDialogButtonBox::accepted, this, &QDialog::accept);
     connect(d->buttonBox, &QDialogButtonBox::rejected, this, &QDialog::reject);
     connect(d->historyComboBox, &QComboBox::currentIndexChanged,
